@@ -37,6 +37,10 @@ RELEASE 0.96.96 - XXX
 
   - Remove hard-coded dependency on Python 2.2 from Debian packaging files.
 
+  From Richard Viney:
+
+  - Fix use of custom include and lib paths with Visual Studio 8.
+
 
 
 RELEASE 0.96.95 - Mon, 12 Feb 2007 20:25:16 -0600
